<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">蚂蚁救援</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="header">蚂蚁救援服务平台</string>
    <string name="header_select">请选择车辆</string>
    <string name="title_activity_seclect_cars">SeclectCarsActivity</string>
    <string name="title_activity_home_pager">HomePagerActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="reset_besure">确定注销当前账号吗</string>
    <string name="reset_sure">注销当前账号</string>
    <string name="cancel">取消</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="title_activity_about_our">AboutOurActivity</string>
    <string name="title_activity_task_detail">TaskDetailActivity</string>
    <string name="title_activity_camera_help">CameraHelpActivity</string>
    <string name="title_activity_camera_photos">CameraPhotosActivity</string>
    <string name="title_activity_client_sure">ClientSureActivity</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="common">通用</string>
    <string name="modfiy_password">密码修改</string>
    <string name="modfiy_cache">清理缓存</string>
    <string name="about_my">关于我们</string>
    <string name="car_club">蚂蚁救援网络科技有限公司</string>
    <string name="car_English">China Automobile Association</string>
    <string name="car_club_detail">蚂蚁救援网络科技有限公司依托创新的互联网服务平台，致力于为汽车后市场的运营管理提供高效便捷的全新体验。公司目前开发的汽车道路运输及道路救援互联网服务平台为C端车主及B端车商提供了更快、更完美的使用体验。</string>
    <string name="help_camera">救援拍照</string>
    <string name="close">关闭</string>
    <string name="client_sure">客户确认</string>
    <string name="workOrders">工单信息</string>
    <string name="servce_number">服务单号</string>
    <string name="connect_time">接线时间</string>
    <string name="business_source">业务来源</string>
    <string name="client_name">客户姓名</string>
    <string name="client_phone">客户电话</string>
    <string name="servce_project">服务项目</string>
    <string name="charging_standard">收费标准</string>
    <string name="help_reason">救援原因</string>
    <string name="order_time">接单时间</string>
    <string name="send_time">调派时间</string>
    <string name="return_time">回拨时间</string>
    <string name="location_time">到达现场时间</string>
    <string name="location_km">到达里程</string>
    <string name="truck_km">拖车里程</string>
    <string name="send_person">调派供应商</string>
    <string name="actual_person">实际供应商</string>
    <string name="assist_car">施救车辆</string>
    <string name="dispatch_car_number">调度车牌号</string>
    <string name="service_state">服务单状态</string>
    <string name="order_type">派单方式</string>
    <string name="actual_complete_time">实际完成时间</string>
    <string name="client_satisfaction">客户满意度</string>
    <string name="explain">说明</string>
    <string name="car_help">蚂蚁救援</string>
    <string name="versions">1.4.3（测试环境版本）</string>
    <string name="check_update">检查更新</string>
    <string name="servce_type">服务类型</string>
    <string name="car_number">车牌号</string>
    <string name="depart_time">出发时间</string>
    <string name="depart_position">出发位置</string>
    <string name="arrive_time">到达时间</string>
    <string name="fault_position">故障地点</string>
    <string name="arrive_km">到达里程</string>
    <string name="wheather_help">是否事故救援</string>
    <string name="photo_number">照片数量</string>
    <string name="wheather_evaluate">请对本次服务给予评价</string>
    <string name="star_level">星级：</string>
    <string name="help_document">帮助文档</string>
    <string name="homepager">首页</string>
    <string name="homelist">列表</string>
    <string name="homemy">我</string>
    <string name="my_detail">我的资料</string>
    <string name="username">用户姓名：</string>
    <string name="userstatus">用户状态：</string>
    <string name="supplier">供应商：</string>
    <string name="tel_number">联系手机：</string>
    <string name="create_time">创建日期：</string>
    <string name="about">关于</string>
    <string name="road_project">线路规划</string>
    <string name="title_activity_work_orders_index">WorkOrdersIndexActivity</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="version_num">1.4.3</string>
    <string name="reset">提        交</string>
    <string name="truck_operate">拖车操作</string>
    <string name="truck_arrive">拖车已到达</string>
    <string name="arrive_record">前 往 录 音</string>
    <string name="login">登     录</string>
    <string name="copyright">BreakThrough Tech. © 2015-2018</string>

    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
</resources>