<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:background="@color/home_actionBar" >

        <TextView
            style="@style/total_title"
            android:text="@string/client_sure" />

        <TextView
            android:id="@+id/tv_client_close"
            style="@style/total_title_close" />
    </RelativeLayout>

    <View
        style="@style/view_line"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/ll_pwd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/my_item"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/table_weigh_name"
            android:text="@string/servce_number" />

        <TextView
            android:id="@+id/woNoTv"
            style="@style/table_weigh_value"
            android:text="" />
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/my_item"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/table_weigh_name"
            android:text="@string/servce_type" />

        <TextView
            android:id="@+id/serverTypeTv"
            style="@style/table_weigh_value" />
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/my_item"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/table_weigh_name"
            android:text="@string/car_number" />

        <TextView
            android:id="@+id/carNoTv"
            style="@style/table_weigh_value" />
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/my_item"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/table_weigh_name"
            android:text="@string/depart_time" />

        <TextView
            android:id="@+id/startTmTv"
            style="@style/table_weigh_value" />
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:background="@drawable/my_item"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/table_weigh_name"
            android:text="@string/depart_position" />

        <TextView
            android:id="@+id/startLocTv"
            style="@style/table_weigh_value" />
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/my_item"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/table_weigh_name"
            android:text="@string/arrive_time" />

        <TextView
            android:id="@+id/endLocTv"
            style="@style/table_weigh_value" />
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:background="@drawable/my_item"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/table_weigh_name"
            android:text="@string/fault_position" />

        <TextView
            android:id="@+id/fromLocTv"
            style="@style/table_weigh_value" />
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/my_item"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/table_weigh_name"
            android:text="@string/arrive_km" />

        <TextView
            android:id="@+id/arriveMileage"
            style="@style/table_weigh_value" />
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/my_item"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/table_weigh_name"
            android:text="@string/wheather_help" />

        <TextView
            android:id="@+id/faultType"
            style="@style/table_weigh_value" />
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/my_item"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/table_weigh_name"
            android:text="@string/photo_number" />

        <TextView
            android:id="@+id/pictureNumberTv"
            style="@style/table_weigh_value" />
    </LinearLayout>

    <View style="@style/view_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.5" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/wheather_evaluate"
            android:textColor="@color/color_red"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star_level"
            android:textSize="18sp" />

        <RatingBar
            android:id="@+id/room_ratingbar"
            style="@style/roomRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:rating="5" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.0" >

        <Button
            android:id="@+id/btn_record"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/operats"
            android:text="@string/arrive_record"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

</LinearLayout>