<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:background="@color/home_actionBar" >

        <TextView
            style="@style/total_title"
            android:text="@string/about" />

        <ImageView
            android:id="@+id/about_back"
            style="@style/aleft"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_person"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/versionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/versions"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <LinearLayout
        android:id="@+id/ll_about_our"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@drawable/my_item"
        android:gravity="center_vertical" >

        <TextView
            style="@style/ss_ll_item_textView"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:text="@string/about_my" />

        <ImageView
            style="@style/ss_ll_item_imageView"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
        android:id="@+id/ll_about_checkUpdate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@drawable/my_item"
        android:gravity="center_vertical" >

        <TextView
            style="@style/ss_ll_item_textView"
            android:layout_width="0dp"
            android:layout_weight="3.5"
            android:text="@string/check_update" />

        <TextView
            android:id="@+id/version1Tv"
            style="@style/ss_ll_item_textView"
            android:layout_width="0dp"
            android:layout_weight="3.5"
            android:gravity="right"
            android:text="@string/version_num"
            android:textSize="15sp" />

        <ImageView
            style="@style/ss_ll_item_imageView"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.3"
        android:gravity="center"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:background="@color/line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/copyright"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>