<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_gray"
    android:id="@+id/rootView"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:background="@color/home_actionBar" >

        <TextView
            style="@style/total_title"
            android:text="@string/help_camera" />

        <TextView
            android:id="@+id/tv_close"
            style="@style/total_title_close" />
    </RelativeLayout>

    <View style="@style/view_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.2"
        android:background="@drawable/my_item" >

        <GridView
            android:id="@+id/gv_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:numColumns="2" >
        </GridView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/trailerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:visibility="gone"
        android:background="@drawable/my_item"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/arrive"
            android:text="@string/truck_arrive"
            android:textColor="@color/home_actionBar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/operate"
            android:text="@string/truck_operate"
            android:textColor="@color/white" />
    </RelativeLayout>

    <View style="@style/view_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" >

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/login_reset"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>