<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/person"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/home_actionBar" >

        <TextView
            style="@style/total_title"
            android:text="@string/my_detail" />

        <ImageView
            android:id="@+id/person_back"
            style="@style/aleft"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/line" />

    <LinearLayout
        android:id="@+id/ll_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_item"
        android:gravity="center_vertical" >

        <com.blks.customer.CircleImageView
            android:id="@+id/img_ss_head"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/app_name"
            app:imgSrc="@drawable/header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/userNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="caa0000426"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/superNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开发测试供应商"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@drawable/my_item"
        android:gravity="center_vertical" >

        <TextView

            style="@style/ss_ll_item_textView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/username" />

        <TextView
            android:id="@+id/nameTv"
            style="@style/ss_ll_item_textView"
            android:layout_width="0dp"
            android:layout_weight="2" />
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
      
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@drawable/my_item"
        android:gravity="center_vertical" >

        <TextView
            style="@style/ss_ll_item_textView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/userstatus" />

        <TextView
            android:id="@+id/statusTv"
            style="@style/ss_ll_item_textView"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="正常" />
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
      
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@drawable/my_item"
        android:gravity="center_vertical" >

        <TextView
            style="@style/ss_ll_item_textView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/supplier" />

        <TextView
            android:id="@+id/superName1Tv"
            style="@style/ss_ll_item_textView"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="开发测试供应商" />
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
      
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@drawable/my_item"
        android:gravity="center_vertical" >

        <TextView
            style="@style/ss_ll_item_textView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/tel_number" />

        <TextView
            android:id="@+id/phoneTv"
            style="@style/ss_ll_item_textView"
            android:layout_width="0dp"
            android:layout_weight="2" />
    </LinearLayout>

    <View style="@style/view_line" />

    <LinearLayout
      
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@drawable/my_item"
        android:gravity="center_vertical" >

        <TextView
            style="@style/ss_ll_item_textView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/create_time" />

        <TextView
            android:id="@+id/createTimeTv"
            style="@style/ss_ll_item_textView"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="2016-06-22 18:05:01" />
    </LinearLayout>

    <View style="@style/view_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.2" >

        <Button
            android:id="@+id/btn_loginOut"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/logout_button"
            android:padding="10dp"
            android:text="注  销"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>